manifests/registry/overlay_multitenancy/fleet-manager.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: registry-deployments-config-file
  labels:
    app: fleet-manager
data:
  registry-deployments.yaml: |-
    deployments:
      - name: default
        # Route to registry
        registryDeploymentUrl: https://apicurio-registry-mt-apicurio-apicurio-registry.apps.smaug.na.operate-first.cloud/
        # Path to tenant manager service
        tenantManagerUrl: http://tenant-manager-mt:8585 

---

kind: ConfigMap
apiVersion: v1
metadata:
  name: registry-quota-plans-config
  labels:
    app: fleet-manager
data:
  quota-plans.yaml: |-
    reconcile: false # Enable this if you make changes to the plans configuration
    plans:
      - name: default
        resources:
          - type: MAX_TOTAL_SCHEMAS_COUNT
            limit: 1000
          - type: MAX_SCHEMA_SIZE_BYTES
            limit: 65536 # 64 KiB
          - type: MAX_ARTIFACTS_COUNT
            limit: -1
          - type: MAX_VERSIONS_PER_ARTIFACT_COUNT
            limit: -1
          - type: MAX_ARTIFACT_PROPERTIES_COUNT
            limit: 50
          - type: MAX_PROPERTY_KEY_SIZE_BYTES
            limit: 256
          - type: MAX_PROPERTY_VALUE_SIZE_BYTES
            limit: 1024
          - type: MAX_ARTIFACT_LABELS_COUNT
            limit: 50
          - type: MAX_LABEL_SIZE_BYTES
            limit: 256
          - type: MAX_ARTIFACT_NAME_LENGTH_CHARS
            limit: -1
          - type: MAX_ARTIFACT_DESCRIPTION_LENGTH_CHARS
            limit: -1
          - type: MAX_REQUESTS_PER_SECOND_COUNT
            limit: 10

---


apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: fleet-manager
    component: fleet-manager
  name: fleet-manager
spec:
  replicas: 1
  selector:
    component: fleet-manager
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        component: fleet-manager
      name: fleet-manager
    spec:
      volumes:
        - name: registry-deployments-config-file
          configMap:
            name: registry-deployments-config-file
        - name: registry-quota-plans-config
          configMap:
            name: registry-quota-plans-config
      containers:
      - image: fleet-manager:latest
        imagePullPolicy: Always
        name: fleet-manager
        ports:
          - name: web
            containerPort: 8080
            protocol: TCP
        env:
          - name: SERVICE_API_DATASOURCE_URL
            valueFrom:
              configMapKeyRef:
                name: postgresql-fleetmanager-configmap
                key: pg-ds-url
          - name: SERVICE_API_DATASOURCE_USERNAME
            valueFrom:
              configMapKeyRef:
                name: postgresql-fleetmanager-configmap
                key: pg-user
          - name: SERVICE_API_DATASOURCE_PASSWORD
            valueFrom:
              configMapKeyRef:
                name: postgresql-fleetmanager-configmap
                key: pg-pwd
          - name: REGISTRY_BROWSER_URL
            value: 'https://apicurio-registry-mt-apicurio-apicurio-registry.apps.smaug.na.operate-first.cloud/t/TENANT_ID'
          - name: REGISTRY_QUOTA_PLANS_CONFIG_FILE
            value: '/config/quota-plans.yaml'
          - name: REGISTRY_DEPLOYMENTS_CONFIG_FILE
            value: '/config/registry-deployments.yaml'

          - name: AUTH_ENABLED
            value: 'true'
          - name: KEYCLOAK_URL
            value: 'https://auth.apicur.io/auth'
          - name: KEYCLOAK_REALM
            value: 'operate-first-apicurio'
          - name: KEYCLOAK_API_CLIENT_ID
            value: 'sr-fleet-manager'
          - name: TENANT_MANAGER_AUTH_ENABLED
            value: 'true'
          - name: TENANT_MANAGER_AUTH_SERVER_URL
            value: 'https://auth.apicur.io/auth'
          - name: TENANT_MANAGER_AUTH_SERVER_REALM
            value: 'operate-first-apicurio'
          - name: TENANT_MANAGER_AUTH_CLIENT_ID
            value: 'sr-tenant-manager'
          - name: TENANT_MANAGER_AUTH_SECRET
            valueFrom:
              secretKeyRef:
                name: tenant-manager-auth-secret
                key: client_secret
          - name: ORGANIZATION_ID_CLAIM
            value: 'organization_id'
          - name: USE_LOCAL_AMS
            value: 'true'
        volumeMounts:
          - name: registry-deployments-config-file
            mountPath: /config/registry-deployments.yaml
            subPath: registry-deployments.yaml
          - name: registry-quota-plans-config
            mountPath: /config/quota-plans.yaml
            subPath: quota-plans.yaml
        resources:
          limits:
            cpu: 100m
            memory: 600Mi
          requests:
            cpu: 100m
            memory: 600Mi
        terminationMessagePath: /dev/termination-log
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - fleet-manager
      from:
        kind: ImageStreamTag
        name: fleet-manager-mt:latest
    type: ImageChange

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fleet-manager
  name: fleet-manager
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: fleet-manager
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fleet-manager
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: fleet-manager
spec:
  to:
    kind: Service
    #HEY workaround here!! because of using nameSuffix: '-mt' in Kustomize
    name: fleet-manager-mt
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
