manifests/registry/overlay_multitenancy/tenant-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apicurio-registry
    template: tenant-manager
  name: tenant-manager
spec:
  selector:
    app: apicurio-registry
  ports:
    - port: 8585
      protocol: TCP
      targetPort: 8585
  sessionAffinity: None
status:
  loadBalancer: {}
